<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SellFlip</string>
    <string name="action_settings">Settings</string>
    <string name="search_results">Search results</string>
    <string name="login">Login</string>
    <string name="create_ad">Post Your Ad</string>
    <string name="description_label"><font fgcolor="#FFFFFFFF">Description</font>: Hello world asdasda </string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_normal">Normal</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="title_activity_full_screen_video">FullScreenVideoActivity</string>
    <string name="description">Media Controls</string>
    <string name="title_activity_capture_video">CaptureVideoActivity</string>
    <string name="next">Next</string>
    <string name="determining_location">Determining your location, please wait…</string>
    <string name="map_move_marker">You can move your marker around in 5km radius</string>
    <string name="map_specify_radius">You can click the marker to add a blue circle to hide your exact location. Adjust blue circle with pinch-to-zoom.</string>
    <string name="create_post_ad">Create New Ad</string>
    <string name="create_ad_image">Ad image</string>
    <string name="create_ad_title">Ad Title</string>
    <string name="create_take_video">Take video</string>
    <string name="create_title">Title:</string>
    <string name="create_price">Price:</string>
    <string name="create_contact">Please contact</string>
    <string name="create_free">Free</string>
    <string name="create_description">Description:</string>
    <string name="create_location_info">Location Info</string>
    <string name="create_location">Location:</string>
    <string name="create_new_location">Add new location…</string>
    <string name="create_contact_info">Contact Info</string>
    <string name="create_select_cover_frame">Select Cover:</string>
    <string name="create_phone">Phone:</string>
    <string name="create_email">Email:</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="location_preference_key">ru.toxuin.sellflip.SAVED_LOCATIONS_KEY</string>
    <string name="quit_str">Discard Video</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="video_cancel">Are you sure you want to discard the video?</string>
    <string name="facebook_app_id">1589994231215559</string>
    <string name="create_save_video_error">Error saving video. Please try again</string>
    <string name="create_title_too_long">Title is too long! 50 letters max.</string>
    <string name="error_empty_field">Field should not be empty</string>
    <string name="create_error_specify_phone_or_email">Please specify either phone or email</string>
    <string name="create_error_specify_price">Please specify price!</string>
    <string name="create_error_no_location">Please select location first!</string>
    <string name="starting_video_upload">Uploading video…</string>
    <string name="error_video_upload">Error uploading video.</string>
    <string name="address_warning">Please note that all specified locations are determined automatically and may not be actual seller\'s address.
        Please use them only as a reference.
    </string>
    <string name="use_back_btn_to_nav">Use device back button to navigate in category tree!</string>
    <string name="broadcast_intent_auth">ru.toxuin.sellflip.intent.action.AUTH_REQUESTED</string>
    <string name="broadcast_intent_total_items">ru.toxuin.sellflip.intent.info.BROADCAST_TOTAL_ITEMS</string>
    <string name="broadcast_intent_empty_result">ru.toxuin.sellflip.intent.info.BROADCAST_EMPTY_SEARCH_RESULT</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="open_map">Open map</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="fail_auth">Failed to Authenticate</string>
    <string name="register_new_acc">Register a New Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="expand">expand</string>
    <string name="email_seller">Email Seller</string>
    <string name="fb_username">Firstname Last name</string>
    <string name="categories">Categories</string>
    <string name="app_preference_key">sellflip_shared_preferences</string>
    <string name="action_search">Search</string>
    <string name="send">Send the Message</string>
    <string name="message">Message</string>
    <string name="your_message">Your message</string>
    <string name="email">Email</string>
    <string name="subject_line">Subject Line</string>
    <string name="subject">Subject</string>
    <string name="email_hint">Email we can reach you at</string>
    <string name="add_to_favs">Add this to favorites!</string>
    <string name="remove_from_favs">Remove from favorites</string>
</resources>
