<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/single_ad_background"
    android:fillViewport="true"
    android:overScrollMode="never">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="16dp"
            android:text="@string/create_post_ad"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/single_ad_brighter">

            <ImageView
                android:id="@+id/adPic"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/create_ad_image"/>

            <TextView
                android:id="@+id/adTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/adPic"
                android:background="#22000000"
                android:gravity="center"
                android:text="@string/create_ad_title"
                android:textColor="#FFFFFF"
                android:textSize="24sp"/>


            <ImageButton
                android:id="@+id/takeVideoBtn"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/adPic"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_image_photo_camera"
                android:contentDescription="@string/create_take_video"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Frame"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <SeekBar
                    android:id="@+id/frameSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <EditText
                    android:id="@+id/titleEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textAutoCorrect"
                    android:maxLength="50"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" android:baselineAligned="true" android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_price"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/create_price_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="7"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:maxLength="7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <RadioGroup
                        android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="left" android:gravity="center_vertical" android:baselineAligned="true">
                    <RadioButton
                        android:id="@+id/radioButtonFree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/create_free"/>

                    <RadioButton
                        android:id="@+id/radioButtonContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/create_contact"/>
                </RadioGroup>

            </TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_description"
                android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/create_description"
                android:maxLines="10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine|textMultiLine"
                android:maxHeight="100dp" android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#33000000"
                android:gravity="center"
                android:text="@string/create_location_info"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true" android:gravity="center_vertical" android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                        />

                <Spinner
                    android:id="@+id/create_location_spinner"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"/>

            </TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#33000000"
                android:gravity="center"
                android:text="@string/create_contact_info"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" android:baselineAligned="true" android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:maxLength="12"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" android:gravity="center_vertical" android:baselineAligned="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical|end|right" android:baselineAligned="true">

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/create_post_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/post"
                    android:textSize="16sp"
                    bootstrap:bb_type="success"
                    />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/create_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    bootstrap:bb_type="danger"
                    />

            </TableRow>

        </LinearLayout>


    </LinearLayout>

</ScrollView>